syntax = "proto3";

package com.bird.say.hi.im.sdk;

option java_package = "com.bird.say.hi.im.sdk";
option java_outer_classname = "SayHiUserProto";
option java_multiple_files = true;

message UserInfo {
    int64 user_id = 1; // 会话ID
    string nick_name = 2; // 用户昵称
    string avatar = 3; // 用户头像
}

message LoginRequest {
    string user_name = 1;
    string password = 2;
}

message LoginResponse {
    UserInfo user_info = 1; // 用户信息
}

service UserService {
    rpc login(LoginRequest) returns (LoginResponse);
}